[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "origins-forge-engine"
version = "22.1.2"
description = "Origins Intelligent Dev Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "rich",
    "google-genai",
    "questionary",
    "PyGithub",
    "openai",
    "requests"
]

[project.scripts]
origins = "origins_forge.main:app"

[tool.setuptools]
packages = ["origins_forge"]